feat: create user controller
